--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
+    "styled-components": "^6.1.13",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.0",
     "vite": "^6.0.1"
